Updated pom.xml and removed transaction artifacts