@@ -13,7 +13,7 @@
     <artifactId>fortunelink</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>fortunelink</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Manage your portfolio and furture investments all in one location</description>
     <url />
     <licenses>
         <license />
@@ -260,18 +260,25 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>get-artifact-paths</id>
+                        <phase>initialize</phase>
                         <goals>
                             <goal>properties</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.3</version>
                 <configuration>
                     <argLine>
-                        @{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+AllowRedefinitionToAddDeleteMethods
+                        -javaagent:"${org.mockito:mockito-core:jar}"
+                        -XX:+EnableDynamicAgentLoading
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
